--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="assets/img/logo.jpg" type="image/x-icon">
 
 </head>
 <body>
@@ -54,11 +55,11 @@
             <i class="bi bi-geo-alt"></i> Find a store
           </a>
 
-          <a href="#" class="btn btn-outline-dark rounded-pill px-3">
+          <a href="login.html" class="btn btn-outline-dark rounded-pill px-3">
             Sign in
           </a>
 
-          <a href="#" class="btn btn-dark rounded-pill px-3">
+          <a href="register.html" class="btn btn-dark rounded-pill px-3">
             Join now 
           </a>
         </div>
@@ -69,7 +70,7 @@
 
   <div class="top-bar">
     <span>It’s a great day for a cup of tea.</span>
-    <a href="#" class="top-bar-btn">Start Order</a>
+    <a href="menu.html" class="top-bar-btn">Start Order</a>
   </div>
   <!-- End NAVBAR -->
       
@@ -82,7 +83,7 @@
         <div class="carousel-item active">
           <div class="hero-wrapper container">
             <div class="hero-text">
-              <h1>Authentic Thai Tea<br>In Every Cup</h1>
+              <h1>*Try Our New<br>MOCHI TARO</h1>
               <p>Crafted with premium ingredients, served with minimalist taste.</p>
               <a href="menu.html" class="hero-btn">Explore Menu</a>
             </div>
@@ -96,7 +97,7 @@
         <div class="carousel-item">
           <div class="hero-wrapper container">
             <div class="hero-text">
-              <h1>Minimalist Coffee<br>Maximum Flavor</h1>
+              <h1>*New <br>Signature Series<br>GAGA Overload</h1>
               <p>A perfect blend of simplicity & quality.</p>
               <a href="promo.html" class="hero-btn">See Promo</a>
             </div>
@@ -110,12 +111,12 @@
         <div class="carousel-item">
           <div class="hero-wrapper container">
             <div class="hero-text">
-              <h1>Superior Coffee<br>Ultra Flavor</h1>
+              <h1>Mochi Series<br>Mochi Taro Thai Milk Tea</h1>
               <p>From the heart of Thailand, our coffee is made with the finest ingredients.</p>
               <a href="promo.html" class="hero-btn">See Promo</a>
             </div>
             <div class="hero-img">
-              <img src="https://scontent.cdninstagram.com/v/t51.71878-15/489916298_1597731621617601_8054486997606129936_n.jpg?stp=dst-jpg_e15_tt6&_nc_cat=108&ig_cache_key=MzYxMDM5NDIxMDM1NDUyMDA5MA%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjY0MHg4MDAuc2RyLkMzIn0%3D&_nc_ohc=-kmu1mCJk60Q7kNvwFxzJ3o&_nc_oc=Adnl4WTT82hCMx0f_vmJoyRvUfVRrOn_dhb2JJWxC9_pizqYtSM2MbKa77xn3-4crcaDZPGt__5G8d56KZewyWB5&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=JZJwhp4uB6WhZVQ6AIUwpg&oh=00_AfmLbKdYl20n4arLx1Z21xRwQKswjWmuRR5sT0ovksxnAg&oe=693CD54C" alt="Coffee">
+              <img src="assets/img/menu-mochitt1.jpg" alt="Coffee">
             </div>
           </div>
         </div>
@@ -164,7 +165,7 @@
           konsisten, segar, dan penuh karakter.
         </p>
 
-        <a href="about.html" class="about-btn">Selengkapnya →</a>
+        <a href="contact.html" class="about-btn">Selengkapnya →</a>
       </div>
 
     </div>
@@ -298,11 +299,11 @@
 
         <!-- Card 3 -->
         <article class="news-card">
-          <img src="https://scontent.cdninstagram.com/v/t51.75761-15/475569780_18213903127293109_6734145804199902891_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=109&ig_cache_key=MzU1NjExNTE1MTk0MDYyNTE1Mg%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjE0NDB4MTQ0MC5zZHIuQzMifQ%3D%3D&_nc_ohc=zRw2iWxKuKQQ7kNvwHsg0ZR&_nc_oc=Adk87MKLMTCc6nAO1zAiX5zr3UnwreV4Im3Bg2q0u1lJV9AXTD8xZRK8HHmGoHwrqJkWnSc1ir5fPtwBqDRlGmhl&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=LYvS4yzxSc7fKOSmMEpe5A&oh=00_Afk0GXhxuhod7F4tebyJEcKN01AmdSBE2gK5YCSWMTKx_Q&oe=693CCE1C" alt="New Product">
+          <img src="https://scontent.cdninstagram.com/v/t51.82787-15/571655867_17910959088246982_2426954098105557103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=102&cb=8438d1d6-990335f2&ig_cache_key=Mzc1MTA2Mjk4MDQyODczMDY3NA%3D%3D.3-ccb7-5-cb8438d1d6-990335f2&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEzNTB4MTY4OC5zZHIuQzMifQ%3D%3D&_nc_ohc=O7Pfnbgm1x4Q7kNvwHMIwE0&_nc_oc=Adn6z5bGbCIKonlnZZnKP6Alr9h4MZP_S1CGwx58MLfeZnsOv5ThL4zAXvYDFZPgo5c&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=XPzMsxDgYE7ucopzfR6LnQ&oh=00_Afl_KA2AGtpjivWUEnBVuzXQUgSq6nLZ-AV9zPCvtnTlXA&oe=69451535" alt="New Product">
           <div class="news-content">
             <span class="news-date">9 September 2025</span>
-            <h3>Menu Baru Hadir dengan Rasa Premium</h3>
-            <p>Eksplorasi cita rasa baru yang terinspirasi dari budaya Thailand.</p>
+            <h3>Promo Besar-Besaran Haloeweeeen!</h3>
+            <p>Dapatkan promo pembelian GAGA di Store! Cukup beli 1 menu gets 15% offer!</p>
             <a href="#" class="news-link">Baca selengkapnya →</a>
           </div>
         </article>
@@ -340,17 +341,17 @@
 
       <!-- CUSTOMER CENTER -->
       <div class="footer-col">
-        <h4>Customer Center</h4>
+        <h4>Office</h4>
         <p>
           Gedung Graha Arda<br>
-          Lantai 1 Suite 120 & 130<br><br>
-          Jl. Hayam Wuruk No. 28<br>
-          Kebon Klapa, Gambir<br>
-          Jakarta Pusat, DKI Jakarta
+          Lt. 6, Lobby A<br><br>
+          Jl. H. R. Rasuna Said Kav B6.<br>
+          Setiabudi, Jakarta Pusat<br>
+          DKI Jakarta.
         </p>
 
         <p class="footer-wa">
-          <i class="bi bi-whatsapp"></i> 0812-1111-8456
+          <i class="bi bi-whatsapp"></i> (021) 5220352
         </p>
       </div>
 
@@ -379,10 +380,10 @@
         </p>
 
         <div class="footer-social">
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div>
