--- a/menu.html
+++ b/menu.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAGA Indonesia - Attitude in a Cup </title>
+    <title>Menu | GAGA </title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="assets/img/logo.jpg" type="image/x-icon">
 
 </head>
 <body>
@@ -16,7 +18,7 @@
     <div class="container">
 
       <!-- Logo -->
-      <a class="navbar-brand fw-bold" href="#">
+      <a class="navbar-brand fw-bold" href="index.html">
         <img src="assets/img/logo.jpg" alt="Logo" width="90" height="70" class="me-2">  
       </a>
 
@@ -54,11 +56,11 @@
             <i class="bi bi-geo-alt"></i> Find a store
           </a>
 
-          <a href="#" class="btn btn-outline-dark rounded-pill px-3">
+          <a href="login.html" class="btn btn-outline-dark rounded-pill px-3">
             Sign in
           </a>
 
-          <a href="#" class="btn btn-dark rounded-pill px-3">
+          <a href="register.html" class="btn btn-dark rounded-pill px-3">
             Join now 
           </a>
         </div>
@@ -69,7 +71,74 @@
 
   <!-- End NAVBAR -->
 
+  <!-- MENU HEADER -->
+  <section class="menu-hero">
+    <div class="menu-hero-overlay">
+        <h1 class="menu-title">OUR MENU</h1>
+    </div>
+  </section>
 
+  <!-- MENU WRAPPER -->
+  <section class="menu-section container">
+
+    <div class="menu-layout">
+
+        <!-- SIDEBAR / CATEGORY -->
+        <aside class="menu-sidebar">
+            <h5 class="menu-sidebar-title">Categories</h5>
+
+            <ul class="menu-categories" id="menuCategories">
+                <li class="active" data-category="all">All</li>
+                <li data-category="recommended">Recommended</li>
+                <li data-category="thai-tea">Thai Tea</li>
+                <li data-category="milk-tea">Milk Tea</li>
+                <li data-category="black-tea">Black Tea</li>
+                <li data-category="fresh-milk">Fresh Milk</li>
+                <li data-category="fresh-juice">Fresh Juice</li>
+                <li data-category="chocolate">Chocolate</li>
+                <li data-category="green-tea">Green Tea</li>
+                <li data-category="coffee">Coffee</li>
+                <li data-category="frappe">Frappe</li>
+                <li data-category="dessert">Dessert</li>
+                <li data-category="signature">Signature</li>
+            </ul>
+        </aside>
+
+        <!-- MENU LIST -->
+        <div class="menu-items" id="menuItems">
+
+            <!-- Menu items will be injected via JS menu.js -->
+
+        </div>
+
+    </div>
+
+  </section>
+
+  <!-- PRODUCT MODAL -->
+<div id="productModal" class="modal-overlay">
+  <div class="modal-box">
+
+    <span class="modal-close" onclick="closeModal()">&times;</span>
+
+    <div class="modal-content">
+      <div class="modal-img-wrap">
+        <img id="modalImg" class="modal-img">
+      </div>
+
+      <div class="modal-info">
+        <h2 id="modalName"></h2>
+        <p class="modal-price" id="modalPrice"></p>
+        <p class="modal-desc" id="modalDesc"></p>
+
+        <a id="modalOrderBtn" class="modal-btn" href="store.html">
+          <i class="bi bi-bag"></i> Pesan di Store
+        </a>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
   <!-- FOOTER -->
@@ -83,17 +152,17 @@
 
       <!-- CUSTOMER CENTER -->
       <div class="footer-col">
-        <h4>Customer Center</h4>
+        <h4>Office</h4>
         <p>
           Gedung Graha Arda<br>
-          Lantai 1 Suite 120 & 130<br><br>
-          Jl. Hayam Wuruk No. 28<br>
-          Kebon Klapa, Gambir<br>
-          Jakarta Pusat, DKI Jakarta
+          Lt. 6, Lobby A<br><br>
+          Jl. H. R. Rasuna Said Kav B6.<br>
+          Setiabudi, Jakarta Pusat<br>
+          DKI Jakarta.
         </p>
 
         <p class="footer-wa">
-          <i class="bi bi-whatsapp"></i> 0812-1111-8456
+          <i class="bi bi-whatsapp"></i> (021) 5220352
         </p>
       </div>
 
@@ -122,10 +191,10 @@
         </p>
 
         <div class="footer-social">
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -134,6 +203,7 @@
       
       
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/menu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
