--- a/store.html
+++ b/store.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find a Store | GAGA </title>
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/store.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="assets/img/logo.jpg" type="image/x-icon">
 
 </head>
 <body>
@@ -54,11 +56,11 @@
             <i class="bi bi-geo-alt"></i> Find a store
           </a>
 
-          <a href="#" class="btn btn-outline-dark rounded-pill px-3">
+          <a href="login.html" class="btn btn-outline-dark rounded-pill px-3">
             Sign in
           </a>
 
-          <a href="#" class="btn btn-dark rounded-pill px-3">
+          <a href="register.html" class="btn btn-dark rounded-pill px-3">
             Join now 
           </a>
         </div>
@@ -100,7 +102,7 @@
           Enjoy GAGA delivery powered by our delivery partners.
         </p>
     
-        <a href="#" class="delivery-btn">
+        <a href="login.html" class="delivery-btn">
           Get started <i class="bi bi-box-arrow-up-right"></i>
         </a>
     
@@ -134,7 +136,7 @@
         <h4>Office</h4>
         <p>
           Gedung Graha Arda<br>
-          Lantai 6, Lobby A<br><br>
+          Lt. 6, Lobby A<br><br>
           Jl. H. R. Rasuna Said Kav B6.<br>
           Setiabudi, Jakarta Pusat<br>
           DKI Jakarta.
@@ -170,10 +172,10 @@
         </p>
 
         <div class="footer-social">
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div>
