--- a/promo.html
+++ b/promo.html
@@ -69,8 +69,102 @@
 
   <!-- End NAVBAR -->
 
+  <!-- PROMO SECTION -->
+  <section class="promo-section">
+    <div class="container promo-grid">
+  
+      <!-- Promo Card 1 -->
+      <div class="promo-card dark">
+        <div class="promo-content">
+          <h3>New Signature Series</h3>
+          <p>
+            it’s giving soft, sweet, and chewy perfection🍠💫 <br>
+            The Mochi Taro Series by @gaga.indo brings together taro, milk tea, and sticky rice pearl in every comforting sip. Which one’s your pick: classic or Thai milk tea?
+          </p>
+          <a href="menu.html" class="promo-btn">Explore Menu</a>
+        </div>
+        <div class="promo-image">
+          <img src="https://cdn.minorfood.com/uploaded/brand/content/167349624863bf86b82463c.jpg" alt="GAGA Signature Drink">
+        </div>
+      </div>
+  
+      <!-- Promo Card 2 -->
+      <div class="promo-card light">
+        <div class="promo-image">
+          <img src="assets/img/hero1.jpg" class="img-fluid w-50" alt="Limited Edition">
+        </div>
+        <div class="promo-content">
+          <h3>Limited Time Only</h3>
+          <p>
+            Introducing "Scream Matcha" from GAGA CEREMONIAL MATCHA SERIES! 🍃 "Scream Matcha" (Scream Matcha) Formal Grade Organic Matcha 4 Layers! Matcha Latte, Matcha Mousse, Matcha Jelly and Matcha Mochi are full of flavor and premium in one glass!
+          </p>
+          <a href="promo.html" class="promo-btn outline">Explore Menu</a>
+        </div>
+      </div>
 
+      <!-- Promo Card 3 -->
+      <div class="promo-card dark">
+        <div class="promo-content">
+          <h3>12.12 Double Date</h3>
+          <p>
+            Double date? Double drink! Promo 12.12 bikin nongkrong di Batavia PIK makin seru bareng GAGA Thai Milk Tea. 2 Thai Milk Tea cuma 30K! 
+          </p>
+          <a href="menu.html" class="promo-btn">See Promo</a>
+        </div>
+        <div class="promo-image">
+          <img src="assets/img/promo-sec3.jpg" alt="GAGA Signature Drink">
+        </div>
+      </div>
+  
+    </div>
+  </section>
+  <!-- End PROMO SECTION -->
 
+  <!-- MENU SECTION -->
+  <section class="menu-summary-section">
+    <div class="container">
+  
+      <h2 class="menu-title">Promo Menu's</h2>
+  
+      <div class="menu-grid">
+  
+        <!-- Card 1 -->
+        <div class="menu-card">
+          <img src="assets/img/menu1.jpg" class="rounded-3" style="height: 220px;" alt="Matcha Latte">
+          <div class="menu-info">
+            <h4>GAGA Chocolate Dubai</h4>
+            <div class="menu-rating">★ ★ ★ ★ ★</div>
+            <p>Chocolate Dubai, Pistachio Mousse and Cunafa provides the premium chocolate experience you've been waiting for!.</p>
+            <a href="menu.html" class="menu-btn">Learn More</a>
+          </div>
+        </div>
+  
+        <!-- Card 2 -->
+        <div class="menu-card">
+          <img src="assets/img/menu2.jpg" class="rounded-3" alt="Matcha Latte">
+          <div class="menu-info">
+            <h4>Mochi Taro Thai Milk Tea Sticky Rice Pearl</h4>
+            <div class="menu-rating">★ ★ ★ ★</div>
+            <p>Matcha pilihan dengan tekstur smooth dan rasa earthy.</p>
+            <a href="menu.html" class="menu-btn">Learn More</a>
+          </div>
+        </div>
+  
+        <!-- Card 3 -->
+        <div class="menu-card">
+          <img src="assets/img/menu3.jpg" class="rounded-3" alt="Mochi Taro">
+          <div class="menu-info">
+            <h4>Mochi Taro Milk Tea Sticky Rice Pearl</h4>
+            <div class="menu-rating">★ ★ ★ ★ ★</div>
+            <p>Perpaduan taro lembut dengan topping mochi favorit.</p>
+            <a href="menu.html" class="menu-btn">Learn More</a>
+          </div>
+        </div>
+  
+      </div>
+    </div>
+  </section>
+  <!-- End MENU SECTION -->
 
   <!-- FOOTER -->
   <footer class="gaga-footer">
@@ -83,17 +177,17 @@
 
       <!-- CUSTOMER CENTER -->
       <div class="footer-col">
-        <h4>Customer Center</h4>
+        <h4>Office</h4>
         <p>
           Gedung Graha Arda<br>
-          Lantai 1 Suite 120 & 130<br><br>
-          Jl. Hayam Wuruk No. 28<br>
-          Kebon Klapa, Gambir<br>
-          Jakarta Pusat, DKI Jakarta
+          Lt. 6, Lobby A<br><br>
+          Jl. H. R. Rasuna Said Kav B6.<br>
+          Setiabudi, Jakarta Pusat<br>
+          DKI Jakarta.
         </p>
 
         <p class="footer-wa">
-          <i class="bi bi-whatsapp"></i> 0812-1111-8456
+          <i class="bi bi-whatsapp"></i> (021) 5220352
         </p>
       </div>
 
@@ -122,10 +216,10 @@
         </p>
 
         <div class="footer-social">
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div>
