--- a/news.html
+++ b/news.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAGA Indonesia - Attitude in a Cup </title>
+    <title>News | GAGA </title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="icon" href="assets/img/logo.jpg" type="image/x-icon">
 
 </head>
 <body>
@@ -54,11 +55,11 @@
             <i class="bi bi-geo-alt"></i> Find a store
           </a>
 
-          <a href="#" class="btn btn-outline-dark rounded-pill px-3">
+          <a href="login.html" class="btn btn-outline-dark rounded-pill px-3">
             Sign in
           </a>
 
-          <a href="#" class="btn btn-dark rounded-pill px-3">
+          <a href="register.html" class="btn btn-dark rounded-pill px-3">
             Join now 
           </a>
         </div>
@@ -69,12 +70,115 @@
 
   <div class="top-bar">
     <span>It’s a great day for a cup of tea.</span>
-    <a href="#" class="top-bar-btn">Start Order</a>
+    <a href="menu.html" class="top-bar-btn">Start Order</a>
   </div>
   <!-- End NAVBAR -->
 
+  <!-- NEWS SECTION -->
+  <section class="news-section pt-5">
+    <div class="container">
 
+      <!-- Header -->
+      <div class="news-header">
+        <h2>GAGA News</h2>
+        <p>Dapatkan berita terbaru dan cerita menarik dari kami.</p>
+      </div>
 
+      <!-- News Grid -->
+      <div class="news-grid">
+
+        <!-- Card 1 -->
+        <article class="news-card">
+          <img src="https://cdn.minorfood.com/uploaded/page/section/17139498726628ccb0b4ac7.jpg" alt="GAGA Event">
+          <div class="news-content">
+            <span class="news-date">12 November 2025</span>
+            <h3>GAGA Perkuat Komitmen Keberlanjutan</h3>
+            <p>GAGA terus berinovasi untuk menghadirkan minuman berkualitas yang ramah lingkungan.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 2 -->
+        <article class="news-card">
+          <img src="assets/img/news2.jpg" alt="Store Opening">
+          <div class="news-content">
+            <span class="news-date">23 Oktober 2025</span>
+            <h3>Pembukaan Store Baru di Jakarta</h3>
+            <p>Kehadiran store terbaru GAGA membawa pengalaman Thai Tea yang lebih dekat.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 3 -->
+        <article class="news-card">
+          <img src="https://scontent.cdninstagram.com/v/t51.82787-15/571655867_17910959088246982_2426954098105557103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=102&cb=8438d1d6-990335f2&ig_cache_key=Mzc1MTA2Mjk4MDQyODczMDY3NA%3D%3D.3-ccb7-5-cb8438d1d6-990335f2&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEzNTB4MTY4OC5zZHIuQzMifQ%3D%3D&_nc_ohc=O7Pfnbgm1x4Q7kNvwHMIwE0&_nc_oc=Adn6z5bGbCIKonlnZZnKP6Alr9h4MZP_S1CGwx58MLfeZnsOv5ThL4zAXvYDFZPgo5c&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=XPzMsxDgYE7ucopzfR6LnQ&oh=00_Afl_KA2AGtpjivWUEnBVuzXQUgSq6nLZ-AV9zPCvtnTlXA&oe=69451535" alt="New Product">
+          <div class="news-content">
+            <span class="news-date">9 September 2025</span>
+            <h3>Promo Besar-Besaran Haloeweeeen!</h3>
+            <p>Dapatkan promo pembelian GAGA di Store! Cukup beli 1 menu gets 15% offer!</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 4 -->
+        <article class="news-card">
+          <img src="https://cdn.minorfood.com/uploaded/editor/20250819/2.jpg" alt="Achievement">
+          <div class="news-content">
+            <span class="news-date">30 Juli 2025</span>
+            <h3>GAGA Raih Pertumbuhan Positif</h3>
+            <p>GAGA mencatat pertumbuhan bisnis yang konsisten sepanjang tahun.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 5 -->
+        <article class="news-card">
+          <img src="https://scontent.cdninstagram.com/v/t51.82787-15/571655867_17910959088246982_2426954098105557103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=102&cb=8438d1d6-990335f2&ig_cache_key=Mzc1MTA2Mjk4MDQyODczMDY3NA%3D%3D.3-ccb7-5-cb8438d1d6-990335f2&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEzNTB4MTY4OC5zZHIuQzMifQ%3D%3D&_nc_ohc=O7Pfnbgm1x4Q7kNvwHMIwE0&_nc_oc=Adn6z5bGbCIKonlnZZnKP6Alr9h4MZP_S1CGwx58MLfeZnsOv5ThL4zAXvYDFZPgo5c&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=XPzMsxDgYE7ucopzfR6LnQ&oh=00_Afl_KA2AGtpjivWUEnBVuzXQUgSq6nLZ-AV9zPCvtnTlXA&oe=69451535" alt="New Product">
+          <div class="news-content">
+            <span class="news-date">9 September 2025</span>
+            <h3>Promo Besar-Besaran Haloeweeeen!</h3>
+            <p>Dapatkan promo pembelian GAGA di Store! Cukup beli 1 menu gets 15% offer!</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 6 -->
+        <article class="news-card">
+          <img src="https://cdn.minorfood.com/uploaded/editor/20250819/2.jpg" alt="Achievement">
+          <div class="news-content">
+            <span class="news-date">30 Agustus 2025</span>
+            <h3>GAGA Raih Pertumbuhan Positif</h3>
+            <p>GAGA mencatat pertumbuhan bisnis yang konsisten sepanjang tahun.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 7 -->
+        <article class="news-card">
+          <img src="https://cdn.minorfood.com/uploaded/page/section/17139498726628ccb0b4ac7.jpg" alt="GAGA Event">
+          <div class="news-content">
+            <span class="news-date">12 November 2025</span>
+            <h3>GAGA Perkuat Komitmen Keberlanjutan</h3>
+            <p>GAGA terus berinovasi untuk menghadirkan minuman berkualitas yang ramah lingkungan.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+        <!-- Card 8 -->
+        <article class="news-card">
+          <img src="assets/img/news2.jpg" alt="Store Opening">
+          <div class="news-content">
+            <span class="news-date">23 Oktober 2025</span>
+            <h3>Pembukaan Store Baru di Jakarta</h3>
+            <p>Kehadiran store terbaru GAGA membawa pengalaman Thai Tea yang lebih dekat.</p>
+            <a href="#" class="news-link">Baca selengkapnya →</a>
+          </div>
+        </article>
+
+      </div>
+    </div>
+  </section>
+  <!-- END NEWS SECTION -->
 
   <!-- FOOTER -->
   <footer class="gaga-footer">
@@ -87,17 +191,17 @@
 
       <!-- CUSTOMER CENTER -->
       <div class="footer-col">
-        <h4>Customer Center</h4>
+        <h4>Office</h4>
         <p>
           Gedung Graha Arda<br>
-          Lantai 1 Suite 120 & 130<br><br>
-          Jl. Hayam Wuruk No. 28<br>
-          Kebon Klapa, Gambir<br>
-          Jakarta Pusat, DKI Jakarta
+          Lt. 6, Lobby A<br><br>
+          Jl. H. R. Rasuna Said Kav B6.<br>
+          Setiabudi, Jakarta Pusat<br>
+          DKI Jakarta.
         </p>
 
         <p class="footer-wa">
-          <i class="bi bi-whatsapp"></i> 0812-1111-8456
+          <i class="bi bi-whatsapp"></i> (021) 5220352
         </p>
       </div>
 
@@ -126,10 +230,10 @@
         </p>
 
         <div class="footer-social">
-          <a href="#"><i class="bi bi-youtube"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-twitter-x"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </div>
