update dari lilis

--- a/news.html
+++ b/news.html
@@ -111,7 +111,7 @@
 
         <!-- Card 3 -->
         <article class="news-card">
-          <img src="https://scontent.cdninstagram.com/v/t51.82787-15/571655867_17910959088246982_2426954098105557103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=102&cb=8438d1d6-990335f2&ig_cache_key=Mzc1MTA2Mjk4MDQyODczMDY3NA%3D%3D.3-ccb7-5-cb8438d1d6-990335f2&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEzNTB4MTY4OC5zZHIuQzMifQ%3D%3D&_nc_ohc=O7Pfnbgm1x4Q7kNvwHMIwE0&_nc_oc=Adn6z5bGbCIKonlnZZnKP6Alr9h4MZP_S1CGwx58MLfeZnsOv5ThL4zAXvYDFZPgo5c&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=XPzMsxDgYE7ucopzfR6LnQ&oh=00_Afl_KA2AGtpjivWUEnBVuzXQUgSq6nLZ-AV9zPCvtnTlXA&oe=69451535" alt="New Product">
+          <img src="https://cdn.minorfood.com/uploaded/page/section/17139498726628ccb0b4ac7.jpg" alt="New Product">
           <div class="news-content">
             <span class="news-date">9 September 2025</span>
             <h3>Promo Besar-Besaran Haloeweeeen!</h3>
@@ -133,7 +133,7 @@
 
         <!-- Card 5 -->
         <article class="news-card">
-          <img src="https://scontent.cdninstagram.com/v/t51.82787-15/571655867_17910959088246982_2426954098105557103_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=102&cb=8438d1d6-990335f2&ig_cache_key=Mzc1MTA2Mjk4MDQyODczMDY3NA%3D%3D.3-ccb7-5-cb8438d1d6-990335f2&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEzNTB4MTY4OC5zZHIuQzMifQ%3D%3D&_nc_ohc=O7Pfnbgm1x4Q7kNvwHMIwE0&_nc_oc=Adn6z5bGbCIKonlnZZnKP6Alr9h4MZP_S1CGwx58MLfeZnsOv5ThL4zAXvYDFZPgo5c&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.cdninstagram.com&_nc_gid=XPzMsxDgYE7ucopzfR6LnQ&oh=00_Afl_KA2AGtpjivWUEnBVuzXQUgSq6nLZ-AV9zPCvtnTlXA&oe=69451535" alt="New Product">
+          <img src="assets/img/news2.jpg" alt="New Product">
           <div class="news-content">
             <span class="news-date">9 September 2025</span>
             <h3>Promo Besar-Besaran Haloeweeeen!</h3>
