--- a/news.html
+++ b/news.html
@@ -231,7 +231,7 @@
 
         <div class="footer-social">
           <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="www.instagram.com/gaga.indo" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
